simple-service-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service-webapp-service
  labels:
    app: simple-service-webapp
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: simple-service-webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-service-webapp-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-service-webapp
      version: v1
  template:
    metadata:
      labels:
        app: simple-service-webapp
        version: v1
    spec:
      containers:
      - name: simple-service-webapp
        image: docker.io/225517/simple-service-webapp:v1
        resources:
          requests:
            cpu: 100m
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
            httpGet:
                path: /live
                port: 8080
---
