simple-service-webapp-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-service-webapp-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - simple-service-webapp-gateway
  http:
  - match:
    - uri:
        exact: /live
    route:
    - destination:
        host: simple-service-webapp-service
        port:
          number: 8080          
---
